# inflation-forecasting-arima-lstm

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
Data/: ARIMA Forecasting and Errors.xlsx  Data Cleaned.xlsx  README.md  data_dictionary.yml
Scripts/: 1. DataSet Constuction and Graphs.ipynb  2. ARIMA Modeling and Forecasting.do  3. LTSM model.ipynb  4. Model Selection.ipynb  README.md  api.py  arena.py  forecast.py
notebooks/: README.md
notebooks/legacy/: 02_arima_modeling_and_forecasting.do
outputs/: README.md
src/inflation_forecasting/: __init__.py  cli.py  decomposition.py  features.py  io.py  metrics.py  paths.py  plotting.py  preprocess.py  split.py
src/inflation_forecasting/api/: __init__.py  app.py  launcher.py  schemas.py
src/inflation_forecasting/apps/: __init__.py  arena.py  launcher.py  streamlit_arena.py
src/inflation_forecasting/artifacts/: __init__.py  manifests.py  storage.py
src/inflation_forecasting/clis/: __init__.py  common.py  data.py  econometrics.py  ml.py
src/inflation_forecasting/commands/: __init__.py  app.py  data.py  econometrics.py  neural.py
src/inflation_forecasting/data/: __init__.py  features.py  io.py  preprocessing.py  splits.py
src/inflation_forecasting/dataops/: __init__.py  catalog.py  quality.py
src/inflation_forecasting/datasets/: __init__.py  io.py  splits.py
tests/: test_arena.py  test_artifacts.py  test_data_quality.py  test_features_metrics.py  test_preprocess.py  test_sequence_common.py  test_split.py
(+23 files in other folders)
